<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_backgroud"
    android:paddingTop="26dp">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_return_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dashboard"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">


        <TextView
            android:id="@+id/despesas_por_categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:contentDescription="@string/desc_categories"
            android:text="@string/quote_v_expense"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/card_rounded_background"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/color_leisure"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="5dp"
                android:gravity="start">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/color_alimentacao"
                        android:layout_width="15dp"
                        android:layout_height="19dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/color_food" />

                    <TextView
                        android:id="@+id/alimentacao_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/color_transport" />

                    <TextView
                        android:id="@+id/transporte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transport"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/color_residence" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/residence"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/color_leisure" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leisure"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-R$ 420,00"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-R$ 390,00"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-R$ 270,00"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-R$ 130,00"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/receita_x_despesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:contentDescription="@string/desc_categories"
                    android:text="@string/quote_v_expense"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/card_rounded_background"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/comparacao_gastos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:contentDescription="@string/desc_categories"
                    android:text="@string/spend_comparison"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="14dp"
                    android:background="@drawable/card_rounded_background"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/card_rounded_background"
            android:orientation="horizontal"
            android:padding="16sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/icon_money_coins" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bold_alert"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>